--- a/config/application.dist.yml
+++ b/config/application.dist.yml
@@ -10,3 +10,9 @@ logging:
   level:
     root: INFO
     org.springframework.security: DEBUG
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost/spring_rest_demo
+    username: root
+    password:
