--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,18 @@ language: java
 jdk:
   - oraclejdk8
 
-# see https://docs.travis-ci.com/user/languages/java#Caching
+# see: https://docs.travis-ci.com/user/languages/java#Caching
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+# Build only master and issue branches (PR's are also built by default)
+# see: https://docs.travis-ci.com/user/customizing-the-build/#Building-Specific-Branches
+branches:
+  only:
+    - master
+    - /^issue.*$/
 
